<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_fragment_filter_cancel"
            android:layout_width="16dp"
            android:layout_height="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cancel_x" />

        <TextView
            android:id="@+id/text_view_fragment_filter_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/filter_text_view_header"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_view_fragment_filter_divider"
            android:layout_width="409dp"
            android:layout_height="2dp"
            android:layout_marginTop="56dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_fragment_filter_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/filter_text_view_tags"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_view_fragment_filter_divider" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_bar_fragment_filter"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle_search_view"
            android:hint="@string/filter_search_view_hint"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_filter_tags"
            app:queryBackground="@android:color/transparent"
            app:queryHint="Search for tags" />

        <ScrollView
            android:id="@+id/scroll_view_fragment_filter_added"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar_fragment_filter"
            app:layout_goneMarginStart="16dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_fragment_filter_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

        </ScrollView>

        <TextView
            android:id="@+id/text_view_fragment_filter_suggested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/filter_text_view_suggested_tags"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_view_fragment_filter_added" />

        <ScrollView
            android:id="@+id/scroll_view_fragment_filter_suggested"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_filter_suggested">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_fragment_filter_suggested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

        </ScrollView>

        <TextView
            android:id="@+id/text_view_fragment_filter_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/filter_text_view_location"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_view_fragment_filter_suggested" />

        <Spinner
            android:id="@+id/spinner_fragment_filter_location"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#C4C4C4"
            android:fontFamily="@font/poppins_regular"
            android:spinnerMode="dropdown"
            android:textAlignment="textStart"
            android:textColor="@color/colorHint"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_view_fragment_filter_suggested" />

        <TextView
            android:id="@+id/text_view_fragment_filter_zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/filter_text_view_zip_code"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_filter_location" />

        <EditText
            android:id="@+id/edit_text_fragment_filter_zip_code"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#C4C4C4"
            android:fontFamily="@font/poppins_regular"
            android:gravity="left"
            android:hint="@string/filter_edit_text_zip_code_hint"
            android:inputType="number"
            android:paddingStart="16dp"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_fragment_filter_location" />

        <TextView
            android:id="@+id/text_view_fragment_filter_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/filter_text_view_date"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_filter_zip_code" />

        <FrameLayout
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_fragment_filter_zip_code">

            <TextView
                android:id="@+id/text_view_fragment_filter_date_shown"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="top"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="16dp"
                android:text="@string/filter_date_hint"
                android:textColor="@color/colorHint"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/image_view_fragment_filter_date"
                style="@android:style/Widget.Material.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:backgroundTint="#C4C4C4" />

        </FrameLayout>

        <Button
            android:id="@+id/button_fragment_filter_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/filter_button_apply"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>